--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.1.1",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0"
   },
